data/all_generated_tests/raw_wast_tests/block_TypeMismatchinControlFlowInstructions_2560.wast
;; 1. **Test Description**:    Ensure that a `block` construct with an explicit block type that outputs a value type, but with inner instructions that do not produce the required stack values, raises a type error.    **Constraint:** Checking for correct operand stack production as per the block type.    **Relation to Type Mismatch:** Verifies adherence to stack changes dictated by block type.

(assert_invalid
  (module (func $type-block-mismatch (result i32)
    (block (result i32)
      (nop)
    )
  ))
  "type mismatch"
)